Bug 153568 - URL-bar is not working
Summary: URL-bar is not working
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-06 16:19 UTC by Oliver Becker
Modified: 2007-12-17 20:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (889 bytes, patch)
2007-12-08 23:39 UTC, Maksim Orlovich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Becker 2007-12-06 16:19:13 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.1.1 (Gentoo 4.1.1-r3) 
OS:                Linux

The URL-bar is sometimes not working, neither the "Go"-Button right behind it. The only way to browse is then via the history.
Comment 1 Oliver Becker 2007-12-06 16:30:44 UTC
Seems only to be if an history entry is available, because new pages are directly opened.
Comment 2 Maksim Orlovich 2007-12-06 18:04:20 UTC
Could you please elaborate on your comment #1?
For me the pattern seems to be "works every time I am trying to debug it"...
Comment 3 Oliver Becker 2007-12-06 20:30:42 UTC
I don't know why, but at the moment I cannot recreate the bug and I didn't update konqueror...

I will try to get it again. But before I get it again, here is the detailed description:

When I opened konqueror the first time in the current KDE session and typed in an URL that I opened before (so there is an history entry), and hit return or clicked the "Go" button, nothing happened. This was for every page in the history, but when I opened an new page (that was not in history), it opened as expected.

I tried this about 20 times with different sites using the current konqueror, so I know it's not me getting crazy :).
Comment 4 Oliver Becker 2007-12-07 22:56:28 UTC
I got it to occur again and it is the follwoing (when I use history, it's the drop down list for matchin history entries):

I started a new KDE 4 session and opened a new konqueror window.
Then i typed in "bugs.kde.org" which was already in history and therefore showing it.
But when I it return (or clicked on the "Go" button) nothing happened.
I tried it 5 times with this site, also selecting the history entry via the keyboard and hitting return, but this also didn't work.

The strange thing about this is, that "google.com" (wich is also in history) works fine and when I switch to my (parallel running) KDE 3 Desktop and switch back again, all works fine (including bugs.kde.org).

I think it is either the two parallel running KDE sessions (whis would explain that it worked after switching, but not the difference bewteen sites), or it is an difference between the history entries themselfes, so the one site can be opened directly, whilst the other cannot, but this would not explain the switching btw the 2 desktops.

I'm sorry that I cannot write less, but this is because of the strangeness of this bug.
Comment 5 Maksim Orlovich 2007-12-08 23:39:59 UTC
Created attachment 22416 [details]
patch

The following fixes the scenario I could reproduce, testing/feedback
appreciated. However, I really, really, dislike this --- the whole thing looks
ultra-brittle; I don't understand it well enough to suggest a better setup,
either.
Comment 6 Maksim Orlovich 2007-12-17 20:09:54 UTC
SVN commit 749741 by orlovich:

make sure to emit activate() ourselves when the combo is full;
Qt won't do it itself. Fixes konq's location box not working half the 
time

BUG:153568   


 M  +6 -2      khistorycombobox.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=749741