make sure to emit activate() ourselves when the combo is full; Qt won't do it itself. Fixes konq's location box not working half the time

BUG:153568   

svn path=/trunk/KDE/kdelibs/; revision=749741